Update add to cart function on icon

--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -176,6 +176,9 @@
 	</script>
 	<script src="{% static 'js/google-map.js' %}"></script>
 	<script src="{% static 'js/main.js' %}"></script>
+
+	<!-- Cái file jquery này chưa load được -->
+	<!-- <script src="{% static 'js/jquery_add_to_cart.js' %}"></script> -->
 	{% block page_script %}{% endblock %}
 
 	
