--- a/DiChoHo/templates/cart.html
+++ b/DiChoHo/templates/cart.html
@@ -41,16 +41,18 @@
 							<tr class="text-center">
 								<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
 								<td class="image-prod">
-									<div class="img" style="background-image:{{ product.image.url | slice:"10:" }};"></div>
+									<div class="img" style="margin-top: 30px;">
+										<img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="Colorlib Template" />
+									</div>
 								</td>
 								<td class="product-name">
-									<h3>{{product.title}}</h3>
+									<h3 style="margin-top: 15px;">{{product.title}}</h3>
 								</td>
 
-								<td class="price">{{product.price}}đ</td>
+								<td class="price" style="padding-top: 47px;">{{product.price}}đ</td>
 
 								<td class="quantity">
-									<div class="input-group mb-3">
+									<div class="input-group mb-3" style="margin-top:25px;">
 										<input type="text" name="quantity" class="quantity form-control input-number"
 											value="1" min="1" max="100">
 									</div>
@@ -61,29 +63,6 @@
 								{% endwith %}
 								{% endfor %}		
 							{% endif %}
-							<!-- <tr class="text-center">
-								<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-
-								<td class="image-prod">
-									<div class="img" style="background-image:url(/static/images/product-4.jpg);"></div>
-								</td>
-
-								<td class="product-name">
-									<h3>Bell Pepper</h3>
-									<p>Far far away, behind the word mountains, far from the countries</p>
-								</td>
-
-								<td class="price">$15.70</td>
-
-								<td class="quantity">
-									<div class="input-group mb-3">
-										<input type="text" name="quantity" class="quantity form-control input-number"
-											value="1" min="1" max="100">
-									</div>
-								</td>
-
-								<td class="total">$15.70</td>
-							</tr>END TR -->
 						</tbody>
 					</table>
 				</div>
