--- a/DiChoHo/templates/category.html
+++ b/DiChoHo/templates/category.html
@@ -140,7 +140,7 @@
                     mx-1
                   "
                 >
-                  <span><i class="ion-ios-cart"></i></span>
+                  <span><i class="ion-ios-cart" id="add_to_cart_btn" data-value="{{product.id}}"></i></span>
                 </a>
                 <a
                   href="#"
@@ -205,6 +205,26 @@
 	else {
 		document.getElementById("ca").classList.add('active');
 	}
+
+  $(document).on('click', '#add_to_cart_btn', function (e) {
+      e.preventDefault();
+      $.ajax({
+        type: 'POST',
+        url: '{% url "cart_add" %}',
+        data: {
+          productid: $(this).data("value"),
+		  productqty: 1,
+		// chưa làm được quantity nên mặc định là 1
+        //   productqty: $('#id').text(),
+          csrfmiddlewaretoken: "{{csrf_token}}",
+          action: 'post'
+        },
+        success: function (json) {
+          document.getElementById("cart-qty").innerHTML = json.qty
+        },
+        error: function (xhr, errmsg, err) {}
+      });
+    })
 </script>
 
 {% endblock %}
