--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -212,11 +212,8 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-	    								<span><i class="ion-ios-menu"></i></span>
-	    							</a> -->
 								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart"></i></span>
+									<span><i class="ion-ios-cart add_to_cart_cls" data-value="{{product.id}}"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
 									<span><i class="ion-ios-heart"></i></span>
@@ -259,16 +256,13 @@
 						<h3><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
-								<p class="price"><span>{{ product.price }}</span></p>
+								<p class="price"><span>{{ product.price }}đ</span></p>
 							</div>
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-	    								<span><i class="ion-ios-menu"></i></span>
-	    							</a> -->
 								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart"></i></span>
+									<span><i class="ion-ios-cart add_to_cart_cls" data-value="{{product.id}}"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
 									<span><i class="ion-ios-heart"></i></span>
@@ -311,11 +305,8 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-	    								<span><i class="ion-ios-menu"></i></span>
-	    							</a> -->
 								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart" id="add_to_cart_btn" data-value="{{product.id}}"></i></span>
+									<span><i class="ion-ios-cart add_to_cart_cls" data-value="{{product.id}}"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
 									<span><i class="ion-ios-heart"></i></span>
@@ -368,24 +359,29 @@
 </div>
 
 <script>
-	  $(document).on('click', '#add_to_cart_btn', function (e) {
-      e.preventDefault();
-      $.ajax({
-        type: 'POST',
-        url: '{% url "cart_add" %}',
-        data: {
-          productid: $(this).data("value"),
-		  productqty: 1,
-		// chưa làm được quantity nên mặc định là 1
-        //   productqty: $('#id').text(),
-          csrfmiddlewaretoken: "{{csrf_token}}",
-          action: 'post'
-        },
-        success: function (json) {
-          document.getElementById("cart-qty").innerHTML = json.qty
-        },
-        error: function (xhr, errmsg, err) {}
-      });
+	 $(document).ready(function(){
+		$(document).on('click', '.add_to_cart_cls', function (e) {
+		e.preventDefault();
+		console.log("Hello");
+		$.ajax({
+			type: 'POST',
+			url: '{% url "cart_add" %}',
+			data: {
+			productid: $(this).data("value"),
+			productqty: 1,
+			// chưa làm được quantity nên mặc định là 1
+			//   productqty: $('#id').text(),
+			csrfmiddlewaretoken: "{{csrf_token}}",
+			action: 'post'
+			},
+			success: function (json) {
+			console.log("Add successfully");
+			// document.getElementById("cart-qty").innerHTML = json.qty
+			},
+			error: function (xhr, errmsg, err) {}
+		});
     })
+	 });
+	  
 </script>
 {% endblock %}
