--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -91,21 +91,12 @@
             <div class="d-flex">
               <div class="pricing">
                 <p class="price">
-                  <span>{{ product.price }}</span>
+                  <span>{{ product.price }}đ</span>
                 </p>
               </div>
             </div>
             <div class="bottom-area d-flex px-3">
               <div class="m-auto d-flex">
-                <a href="{{ product.get_absolute_url }}" class="
-                    add-to-cart
-                    d-flex
-                    justify-content-center
-                    align-items-center
-                    text-center
-                  ">
-                  <span><i class="ion-ios-menu"></i></span>
-                </a>
                 <a href="#" class="
                     buy-now
                     d-flex
@@ -154,25 +145,28 @@
 </div>
 
 <script>
-    $(document).on('click', '#add_to_cart_btn', function (e) {
-      e.preventDefault();
-      $.ajax({
-        type: 'POST',
-        url: '{% url "cart_add" %}',
-        data: {
-          productid: $(this).data("value"),
-		  productqty: 1,
-		// chưa làm được quantity nên mặc định là 1
-        //   productqty: $('#id').text(),
-          csrfmiddlewaretoken: "{{csrf_token}}",
-          action: 'post'
-        },
-        success: function (json) {
-          document.getElementById("cart-qty").innerHTML = json.qty
-        },
-        error: function (xhr, errmsg, err) {}
-      });
-    })
+    $(document).ready(function(){
+        $(document).on('click', '#add_to_cart_btn', function (e) {
+        e.preventDefault();
+        $.ajax({
+          type: 'POST',
+          url: '{% url "cart_add" %}',
+          data: {
+            productid: $(this).data("value"),
+            productqty: 1,
+      // chưa làm được quantity nên mặc định là 1
+          //   productqty: $('#id').text(),
+            csrfmiddlewaretoken: "{{csrf_token}}",
+            action: 'post'
+          },
+          success: function (json) {
+            console.log("Add successfully");
+            // document.getElementById("cart-qty").innerHTML = json.qty
+          },
+          error: function (xhr, errmsg, err) {}
+        });
+      })
+    });
 </script>
 
 {% endblock %}
